--- a/.env
+++ b/.env
@@ -14,6 +14,6 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=e51060c3f8a1d537f51a1ef0586cb896
 ###< symfony/framework-bundle ###
