--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -7,7 +7,7 @@ $finder = PhpCsFixer\Finder::create()
 
 return PhpCsFixer\Config::create()
     ->setRules([
-        '@Symfony' => true,
+        '@PSR12' => true,
     ])
     ->setFinder($finder)
 ;
