--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,5 +27,8 @@ services:
         resource: '../src/Controller/'
         tags: ['controller.service_arguments']
 
+    Swap\Swap:
+        alias: 'florianv_swap.swap'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
