--- a/config/services.yaml
+++ b/config/services.yaml
@@ -30,5 +30,14 @@ services:
     Swap\Swap:
         alias: 'florianv_swap.swap'
 
+    Money\Currencies:
+        alias: 'Money\Currencies\ISOCurrencies'
+
+    Money\MoneyParser:
+        alias: 'Money\Parser\DecimalMoneyParser'
+
+    Money\Parser\DecimalMoneyParser: ~
+    Money\Currencies\ISOCurrencies: ~
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
