--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,21 @@
 {
+    "name": "ed.suharev/rate-calculator",
+    "description": "Commission Rate calculator",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": ">=7.4",
+        "ext-bcmath": "*",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "better/nanoid": "^0.0.1",
         "florianv/swap-bundle": "^5.1",
         "http-interop/http-factory-guzzle": "^1.0",
-        "mockery/mockery": "^1.4",
         "moneyphp/money": "^3.3",
         "php-http/guzzle6-adapter": "^2.0",
         "php-http/message": "^1.11",
-        "phpunit/phpunit": "^9.5",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
@@ -65,8 +66,11 @@
         }
     },
     "require-dev": {
+        "roave/security-advisories": "dev-master",
         "friendsofphp/php-cs-fixer": "^2.18",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/maker-bundle": "^1.29"
+        "symfony/maker-bundle": "^1.29",
+        "mockery/mockery": "^1.4",
+        "phpunit/phpunit": "^9.5"
     }
 }
