Refactoring to file iteration generator

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,6 +27,9 @@ services:
         resource: '../src/Controller/'
         tags: ['controller.service_arguments']
 
+    App\Service\FileParser\FileParserInterface:
+        alias: 'App\Service\FileParser\CsvFileParser'
+
     Swap\Swap:
         alias: 'florianv_swap.swap'
 
